--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+  background-color: white;
 }
 @media only screen and (max-width: 75em) {
   html {
@@ -21,6 +22,7 @@ body {
   color: #6d5d4b;
   font-weight: 300;
   line-height: 1.6;
+  font-size: 1.7rem;
 }
 
 .container {
